# MiaouGraphics

./: CMakeLists.txt  README.md  vcpkg.json
data/model/Fern/: fern.mtl  fern_new.mtl
data/model/Michelle/: Michelle.mtl
data/model/calathea/: calathea.mtl
data/model/cat/: cat.mtl  catnouv.mtl  catwithbag.mtl  catwithmat.mtl  chat.mtl
data/model/lantern/: lantern.mtl
data/shaders/IBL_Test/: pbr.frag  pbr.vert
data/shaders/final_scene/: model.frag  model.vert  moving_grass2d.frag
data/shaders/hello_HDRCubemap/: pbr.frag
data/shaders/hello_IBL/: background.frag  irradiance_convolution.frag  prefilter.frag
data/shaders/hello_IBL_model/: grass_shadow.frag  grass_shadow.vert  moving_grass2d.frag  moving_grass2d.vert  pbr_customValue.frag  pbr_customValue.vert  pbr_grass.frag  pbr_with_shadow.frag  pbr_with_shadow_SSAO.frag  pbr_with_shadow_multiplelight.frag
data/shaders/hello_IBL_texture/: cubemap_hdr.frag  pbr.frag
data/shaders/hello_PBR/: pbr_text.frag
data/shaders/hello_SSAO/: ssao.frag  ssao_geometry.frag  ssao_geometry.vert  ssao_lighting.frag
data/shaders/hello_cube/: texture.frag
data/shaders/hello_cubemaps/: model.frag
data/shaders/hello_framebuffer/: framebuffer.frag  quad_framebuffer.vert
data/shaders/hello_instantiate/: moving_grass2d.frag  moving_grass2d.vert
data/shaders/hello_light/: cube.frag  cube.vert
data/shaders/hello_light_caster/: cube.frag
data/shaders/hello_lightmaps/: cube.frag  cube.vert  light.frag
data/shaders/hello_model/: moving_grass.frag  moving_grass.vert  moving_grass2d.vert
data/shaders/hello_multiple_light/: Flashlight.frag  Spotlight.frag  multiple_light.frag
data/shaders/hello_outline/: outline.frag  outline.vert  texture.vert
data/shaders/hello_phys_bloom/: bloom.frag  bloom_final.frag  colorshader.frag  light_box.frag  pbr.frag  pbr_with_shadow.frag  pbr_with_shadow.vert
data/shaders/hello_quad/: quad.vert
data/shaders/hello_shadowmapping/: shadow_mapping.frag
data/shaders/hello_texture/: quad.frag  quad.vert
data/shaders/hello_texture_transition/: texture.vert
data/shaders/hello_transform/: texture.vert
include/: Bloom.h  Camera.h  Cubemaps.h  FrameBuffer.h  InstantiateGrass.h  JobSystem.h  Mesh.h  Model.h  PrimitiveObjects.h  Shadowmap.h  engine.h  file_utility.h  pipeline.h  scene.h
main/: IBL_test.cpp  final_scene.cpp  hello_HDR_cubemap.cpp  hello_IBL.cpp  hello_IBL_colorbuffer.cpp  hello_IBL_model.cpp  hello_IBL_multiplelight.cpp  hello_IBL_shadowmap.cpp  hello_IBL_texture.cpp  hello_PBR.cpp  hello_SSAO.cpp  hello_blending.cpp  hello_cube.cpp  hello_cubemaps.cpp  hello_final_scene.cpp  hello_final_scene_withSSAO.cpp  hello_framebuffer.cpp  hello_instanting.cpp  hello_light.cpp  hello_light_caster.cpp  hello_lightmaps.cpp  hello_model.cpp  hello_multiple_light.cpp  hello_normalmap.cpp  hello_outline.cpp  hello_phys_based_bloom.cpp  hello_quad.cpp  hello_shadowmap.cpp  hello_shadowmapping.cpp  hello_texture.cpp  hello_texture_transition.cpp  hello_transform.cpp  hello_triangle.cpp
src/: Bloom.cpp  Camera.cpp  Cubemaps.cpp  FrameBuffer.cpp  InstantiateGrass.cpp  JobSystem.cpp  Mesh.cpp  Model.cpp  PrimitiveObjects.cpp  Shadowmap.cpp  engine.cpp  file_utility.cpp  pipeline.cpp
